Create speed up / slow down platforms. Create tiled map for testing. Create random generated maps.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Together Game - CoffeeScript + Browserify Stack</title>
+  <title>Pixel Jump</title>
   <link rel="stylesheet" href="assets/style.css">
   <script src="//localhost:1337/livereload.js"></script>
   <script src="assets/vendor/jquery/dist/jquery.min.js"></script>
